---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
LibraryBriefResponse {
    artists: [
        ArtistBrief {
            id: RecordId {
                tb: "artist",
                id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
            },
            name: "Test Artist",
        },
    ],
    albums: [
        AlbumBrief {
            id: RecordId {
                tb: "album",
                id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
            },
            title: "Test Album",
            artists: [
                "Test Artist",
            ],
            release_year: None,
            discs: 1,
            genres: [
                "Test Genre",
            ],
        },
    ],
    songs: [
        SongBrief {
            id: RecordId {
                tb: "song",
                id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
            },
            title: "Test Song",
            artists: [
                "Test Artist",
            ],
            album_artists: [
                "Test Artist",
            ],
            album: "Test Album",
            genres: [
                "Test Genre",
            ],
            runtime: Duration {
                seconds: 180,
                nanos: 0,
            },
            track: Some(
                0,
            ),
            disc: Some(
                0,
            ),
            release_year: Some(
                2021,
            ),
            path: "test.mp3",
        },
    ],
    playlists: [
        PlaylistBrief {
            id: RecordId {
                tb: "playlist",
                id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
            },
            name: "Test Playlist",
        },
    ],
    collections: [
        CollectionBrief {
            id: RecordId {
                tb: "collection",
                id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
            },
            name: "Collection 0",
        },
    ],
    dynamic_playlists: [
        DynamicPlaylist {
            id: RecordId {
                tb: "dynamic",
                id: "01J1K5B6RJ84WJXCWYJ5WNE12E",
            },
            name: "Test Dynamic",
            query: "title = \"Test Song\"",
        },
    ],
}
